# OS-2

./: CMakeLists.txt  Makefile  README.docx  main.c  record.c  record.h  root.c  searcher.c  splitter_merger.c  statistics.c  structs.h  types.h  util.c  util.h
common/: util.h
headers/: record.h  statistics.h  util.h
